# AppVeyorTest

./: CMakeLists.txt  README.md  appveyor.yml
ci/: install.ps1
example/: CMakeLists.txt  main.cpp
tests/: test_example.cpp
